--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,8 @@ server.port=8005
 #create database name as infotrixys
 spring.datasource.url=jdbc:mysql://localhost:3306/infotrixys
 spring.datasource.username=root
-spring.datasource.password=Swapnil@1995
+#your Mysql password
+spring.datasource.password=root 
 spring.jpa.database=mysql
  
  
